Alterado estilização da página de login

--- a/pages/login.html
+++ b/pages/login.html
@@ -41,10 +41,10 @@
         <div id="mobile_menu">
             <ul id="mobile_nav_list">
                 <li class="nav-item">
-                    <a href="#home">Início</a>
+                    <a href="../index.html">Início</a>
                 </li>
                 <li class="nav-item">
-                    <a href="#menu">Cardápio</a>
+                    <a href="../index.html#menu">Cardápio</a>
                 </li>
                 <li class="nav-item">
                     <a href="#testimonials">Avaliações</a>
@@ -62,18 +62,17 @@
             <!--link login: https://preview.colorlib.com/theme/bootstrap/login-form-18/#-->
             <div id="container">
                 <div id="login_container">
-                    <h2 class="">Fazer login</h2>
+                    <h2 class="">Faça o seu login</h2>
                     <form id="login_forms" action="#">
                         <input class="login-label" type="text" placeholder="E-mail" required>
                         <input class="login-label" type="password" placeholder="Senha" required>
-                        <label id="remember_label"> Lembrar
-                            <input type="checkbox" checked>
+                        <label id="remember_label"> Lembrar-se
+                            <input type="checkbox">
 
                             <a href="#">Esqueceu sua senha?</a>
                         </label>
-                       
+                        <button id="submit_login" type="submit">Fazer Login</button>
                     </form>
-                    <button id="submit_login" type="submit">Login</button>
                 </div>
             </div>
 
